LcdImageIncluded in save states